<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.NumFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="4"
    android:columnCount="3">

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/num1"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/num2"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/num3"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/num4"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/start"
        android:background="@drawable/red_cross"
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/num5"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/num6"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginTop="10dp"
        android:text="@string/num7"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/num8"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginTop="10dp"
        android:text="@string/num9"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <ImageButton
        android:src="@drawable/voice"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:padding="3dp"
        android:background="@color/defGray"/>

    <Button
        android:layout_gravity="center"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/num0"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_gravity="center"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:background="@color/defGray"
        android:text="@string/space"
        android:textSize="20sp"/>
</GridLayout>