<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.SSignFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="3">

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/sign1"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/sign2"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/sign3"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign4"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/start"
        android:background="@drawable/red_cross"
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign5"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign6"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/sign7"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign8"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="65dp"
        android:text="@string/sign9"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@android:color/white"/>
</GridLayout>