<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.KBRightFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cusGray">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="45dp"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:layout_width="55dp"
            android:layout_height="38dp"
            android:background="@color/defGray"
            android:text="@string/sign1"
            android:textSize="20sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="55dp"
            android:layout_height="38dp"
            android:background="@color/defGray"
            android:text="@string/sign2"
            android:textSize="20sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="55dp"
            android:layout_height="38dp"
            android:background="@color/defGray"
            android:text="@string/sign3"
            android:textSize="20sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="55dp"
            android:layout_height="38dp"
            android:background="@color/defGray"
            android:text="@string/sign4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/s_num"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/defGray"
            android:text="@string/num"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <FrameLayout
            android:id="@+id/typing_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--<include layout="@layout/fragment_seng" />-->
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/s_chin_eng"
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:background="@color/defGray"
                android:text="@string/chin"
                android:textSize="20sp" />

            <Button
                android:id="@+id/s_space"
                android:layout_width="65dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/defGray"
                android:text="@string/space"
                android:textSize="20sp" />

            <Button
                android:id="@+id/s_zero"
                android:layout_width="65dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/white"
                android:text="@string/num0"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/s_sign"
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:background="@color/defGray"
                android:text="@string/sign"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/defGray"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/defGray"
        android:text="@string/clr"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintBottom_toTopOf="@id/button4"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/cusBlue"
        android:text="@string/send"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/s_emoji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageButton
        android:id="@+id/s_emoji"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/defGray"
        android:padding="6dp"
        android:scaleType="fitCenter"
        android:src="@drawable/emoji"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toEndOf="@+id/linearLayout" />
</android.support.constraint.ConstraintLayout>